--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="style.css"/>
 
         <title>Portfolio</title>
+        <style>
+            .about{
+                background:black;
+                border-radius:0.5rem;
+            }
+        </style>
     </head>
     <body>
         <div class="container navigation pt-3">
@@ -34,5 +40,25 @@
                 </div>
             </div>
         </div>
+        <div id="about"class="container about p-5">
+            <div class="row">
+                <div class="col-6">
+                    <img src="images.png"class="img-fluid"/>
+                </div>
+                <div class="col-6 pl-5 pt-5 pb-5 text-white">
+                    <h3 class="text-warning">About codingal</h3>
+                    <h1 class="m-heading">A little bit about me</h1>
+                    <p>
+                        <b class="text-warning">Codingal </b> is on a mission <b class="text-warning">falling in love with coding</b>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum a ipsum temporibus modi at minus. Sint atque, labore rem velit nihil laboriosam, tempora quas, illum id ut doloremque maiores! Aliquam!<b class="text-warning">creators of future</b>
+                    </p>
+                    <br>
+                    <p>
+                        In todays age,<b class="text-warning"> coding</b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse est impedit doloribus voluptatum accusantium odit, aliquid laborum reprehenderit recusandae ipsam modi temporibus veritatis in culpa ex labore corrupti nisi provident.
+                    </p>
+                    <button class="btn btn-outline-warning">Learn more</button>
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
